# adljack

./: .gitignore  .gitmodules  CMakeLists.txt  CPackLists.txt  README.md  common.cc  common.h  jackmain.cc  main.cc  player_traits.h  rtmain.cc  tui.cc
QAdlRt/: CMakeLists.txt  QAdlRt_ru_RU.ts  main.cpp  main_settings.cpp  main_settings.h  main_settings.ui
cmake/: RtAudio.cmake  RtMidi.cmake
po/fr/: adljack.po  adljack_ex.po  adljack_inst.po  adljack_perc.po
resources/: adljack.desktop.in  adlrt.desktop.in  opnjack.desktop.in  opnrt.bat  opnrt.desktop.in
scripts/: create-master-release.sh  i18n.sh
sources/: common.cc  common.h  dcfilter.h  gtk_tray.cc  gtk_tray.h  haikumain.cc  haikumain.h  i18n.cc  i18n.h  i18n_util.h  insnames.cc  insnames.h  jackmain.cc  jackmain.h  player.cc  player.h  player_traits.cc  player_traits.h  rtmain.cc  rtmain.h  state.cc  state.fbs  state.h  state_generated.h  te_virtual_midi.h  tui.cc  tui.h  tui_channels.cc  tui_channels.h  tui_fileselect.cc  tui_fileselect.h  vumonitor.h  win_application.rc  win_resource.h  winmm_dialog.cc  winmm_dialog.h  winmm_dialog.rc
sources/embedded-banks/: opn2.h
tools/: bin2c.ros
